<resources>
    <string name="app_name">Test</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="division">/</string>
    <string name="Multiplication">x</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="about">HW1-Faeze Sh</string>
    <string name="defualt_input_tv">+ 2021.02</string>

</resources>