<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue_dark"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/bg_blue_round">

        <include layout="@layout/layout_switch"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

        <!--     HW1-Faeze Sh      -->
        <FrameLayout
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/grd_about"
            android:orientation="vertical"
            android:rotation="-90"
            android:layout_marginTop="100dp"
            android:layout_marginRight="-55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:fontFamily="@font/orbitron"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="@color/about"
                android:textStyle="bold"/>

        </FrameLayout>

        <!--    TOP     -->
<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="top"-->
<!--            android:layout_marginTop="10dp">-->

<!--            <com.polyak.iconswitch.IconSwitch-->
<!--                android:id="@+id/main_icon_switch"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:isw_active_tint_icon_left="#ceffc3"-->
<!--                app:isw_active_tint_icon_right="#fffcb5"-->
<!--                app:isw_background_color="@color/switch_bg"-->
<!--                app:isw_default_selection="right"-->
<!--                app:isw_icon_left="@drawable/ic_baseline_brightness_3_24"-->
<!--                app:isw_icon_right="@drawable/ic_baseline_brightness_7_24"-->
<!--                app:isw_inactive_tint_icon_left="#adccad"-->
<!--                app:isw_inactive_tint_icon_right="#555648"-->
<!--                app:isw_thumb_color_left="#18191d"-->
<!--                app:isw_thumb_color_right="#18191d" />-->
<!--        </FrameLayout>-->

        <!--    Bottom    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.example.test.custom_views.RegTextView
                android:id="@+id/history_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="12 + 0.13 +"
                android:textColor="@color/txt_green"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="28dp"
                    android:textAlignment="viewEnd"
                    android:ellipsize="end">

                    <com.example.test.custom_views.RegTextView
                        android:id="@+id/main_input_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="+ 2021.02"
                        android:textColor="@color/txt_green"
                        android:textSize="36sp"
                        android:maxLines="1" />
                </HorizontalScrollView>


                <ImageButton
                    android:id="@+id/main_remove_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="14dp"
                    android:background="@drawable/ripple_for_nums"
                    android:clickable="true"
                    android:paddingLeft="14dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_black_round"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/one"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/four"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/seven"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:id="@+id/dot_button"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/dot"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"
                        android:onClick="numOnClick"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/two"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/five"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/eight"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/zero"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/three"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/six"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_for_nums"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:onClick="numOnClick"
                        android:text="@string/nine"
                        android:textColor="@color/numbers"
                        android:textSize="36sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/equal"
                        android:textColor="@color/numbers_equal"
                        android:textSize="36sp"
                        android:onClick="equalOnClick"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/grd_light_green"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp">

                    <Button
                        android:id="@+id/divide_button"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/division"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"
                        android:onClick="operatorOnClick"/>

                    <Button
                        android:id="@+id/minus_button"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/sub"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"
                        android:onClick="operatorOnClick"/>

                    <Button
                        android:id="@+id/multiply_button"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/Multiplication"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"
                        android:onClick="operatorOnClick"/>

                    <Button
                        android:id="@+id/plus_button"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:fontFamily="@font/custom_orbitron_font"
                        android:text="@string/add"
                        android:textColor="@color/numbers"
                        android:textSize="36sp"
                        android:onClick="operatorOnClick"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>





</androidx.constraintlayout.widget.ConstraintLayout>